deleted all html files, condensed all css files, edited a couple small things in the handlebars files, and finished the README

--- a/views/hotels.handlebars
+++ b/views/hotels.handlebars
@@ -28,7 +28,7 @@
                 <div class="image"><img src="./images/unsplash-image-s9Tf1eBDFqw.jpg" alt="Dog lying in pet bed surrounded by plants" /></div><div class="content">
                     <h2>Pet Hotel</h2>
                     <p>
-                    Welcome to our Pet Hotel! Here you can schedule an appointment for any of the fexciting pet stays we provide. If you're in need of someone to watch your pet while you're away, look no further as our pet hotel is the perfect place. We have many highly trained caretakers that take lots of pride in what they do and will watch, feed, and play with your animal so you can rest easy while you're away.<p>
+                    Welcome to our Pet Hotel! Here you can schedule an appointment for any of the exciting pet stays we provide. If you're in need of someone to watch your pet while you're away, look no further as our pet hotel is the perfect place. We have many highly trained caretakers that take lots of pride in what they do and will watch, feed, and play with your animal so you can rest easy while you're away.<p>
                 </div>
             </section>
         </section>
@@ -40,9 +40,9 @@
                 <table>
                     <thead>
                         <tr>
-                            <th>Name</th>
-                            <th>Description</th>
-                            <th>Price</th>
+                            <th id="uno">Name</th>
+                            <th id="dos">Description</th>
+                            <th id="tres">Price</th>
                             <th>Add to Cart</th>
                         </tr>
                     </thead>
@@ -50,7 +50,7 @@
                         {{#each hotels as |hotel|}}
                         <tr>
                             <td>{{hotel.stayType}}</td>
-                            <td>{{hotel.description}}</td>
+                            <td id="dos">{{hotel.description}}</td>
                             <td>{{hotel.price}}</td>
                             <th><button class="button fit primary" id={{hotel.id}}>Schedule Reservation</button></th>
                         </tr>
