--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -20,7 +20,6 @@
                         <li><a href="/hotels">Pet Hotel</a></li>
                         <li><a href="/spas">Pet Spa</a></li>
                         <li><a href="/products">Products</a></li>
-                        <li><a href="/login">Log In</a></li>
                         <li><a id="logout">Log Out</a></li>
                       </ul>
                   </div>
@@ -74,7 +73,7 @@
     }
   </script>
 
-  <section id="three" class="wrapper style3 special">
+  {{!-- <section id="three" class="wrapper style3 special">
     <div class="inner">
         <h2>My Pets</h2>
         <table>
@@ -100,7 +99,7 @@
             </tbody>
         </table>
     </div>
-  </section>
+  </section> --}}
 
   <script src="./js/profile.js"></script>
   <script src="./js/logout.js"></script>
