--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -5,66 +5,65 @@
   <link rel="stylesheet" href="./css/main.css" />
   <link rel="stylesheet" href="./css/profilepic.css">
 </head>
+<body>
+
+<div id="page-wrapper">
+
+<header id="header" class="alt">
+    <h1><a href="/">Petopia</a></h1>
+    <nav id="nav">
+        <ul>
+            <li class="special">
+                <a href="#menu" class="menuToggle"><span>Menu</span></a>
+                <div id="menu">
+                    <ul>
+                      <li><a href="/">Home</a></li>
+                      <li><a href="/hotels">Pet Hotel</a></li>
+                      <li><a href="/spas">Pet Spa</a></li>
+                      <li><a href="/products">Products</a></li>
+                      <li><a href="/login">Log In</a></li>
+                      <li><a id="logout">Log Out</a></li>
+                    </ul>
+                </div>
+            </li>
+        </ul>
+    </nav>
+</header>
 
 <body>
-<div id="page-wrapper">
-  <header id="header" class="alt">
-      <h1><a href="/">Petopia</a></h1>
-      <nav id="nav">
-          <ul>
-              <li class="special">
-                  <a href="#menu" class="menuToggle"><span>Menu</span></a>
-                  <div id="menu">
-                      <ul>
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/hotels">Pet Hotel</a></li>
-                        <li><a href="/spas">Pet Spa</a></li>
-                        <li><a href="/products">Products</a></li>
-                        <li><a id="logout">Log Out</a></li>
-                      </ul>
-                  </div>
-              </li>
-          </ul>
-      </nav>
-  </header>
 
   <section class="main">
   <div class="profile-card">
     <div class="insert-name">
         <h2>Welcome {{user.name}}!</h2>
+        {{!-- and {{pets.userId}} <------- add an if statement here to include the pet name, but only if there's a pet profile attached --}}
      </div>
-
      <div class="image-profile-html">
         <img class="dogo-img" src="./images/DL2.jpg" id="profile-pic" alt="Hand combing the top of a small dog's head">
     </div>
-
     <div class="data">
       <h3>Pet picture</h3>
         <input class="form-input" type="file" accept="image/jpeg, image/png, image/jpg" id="input-file">
     </div>
-
     <div class="data">
       <h3>Pet Name </h3>
-      <input class="form-input" type="text" id="email-signup" />
+      <input class="form-input" type="text" id="name" />
     </div>
-
      <div class="data">
         <h3>Pet breed</h3>
-        <input class="form-input" type="text" id="email-signup" />
+        <input class="form-input" type="text" id="breed" />
       </div>
-
       <div class="data">
         <h3>Pet age</h3>
-        <input class="form-input" type="text" id="email-signup" />
+        <input class="form-input" type="text" id="age" />
       </div>
-
-      <div class="buttons">
-        <a href="#" class="button fit primary">Save Profile</a>
-      </div>
+    <div class="buttons">
+      <a href="#" id='form-submit' class="button fit primary">Save Profile</a>
     </div>
-  </section>
+  </div>
+</section>
 
-  <script>
+<script>
     let profilePic = document.getElementById("profile-pic");
     let inputFile = document.getElementById("input-file");
 
@@ -86,7 +85,7 @@
                 </tr>
             </thead>
 
-          {{!-- Line 93 provided by Katy --}}
+          {{!-- This loops through the entire pet table. How to get multiple pets by the user's id? And how to save the image in the table? --}}
             <tbody>
                 {{#each pets as |pet|}}
                 <tr>
@@ -99,7 +98,7 @@
             </tbody>
         </table>
     </div>
-  </section>
+</section>
 
   <script src="./js/profile.js"></script>
   <script src="./js/logout.js"></script>
