--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -42,6 +42,7 @@
         <img class="dogo-img" src="./images/DL2.jpg" id="profile-pic" alt="Hand combing the top of a small dog's head">
     </div>
     <div class="data">
+      <p>*Please note: This feature is currently under construction.</p><br>
       <h3>Pet picture</h3>
         <input class="form-input" type="file" accept="image/jpeg, image/png, image/jpg" id="input-file">
     </div>
@@ -72,7 +73,9 @@
     }
   </script>
 
-  <section id="three" class="wrapper style3 special">
+  {{!-- --- Under construction --- --}}
+
+  {{!-- <section id="three" class="wrapper style3 special">
     <div class="inner">
         <h2>My Pets</h2>
         <table>
@@ -98,7 +101,7 @@
             </tbody>
         </table>
     </div>
-</section>
+</section> --}}
 
   <script src="./js/profile.js"></script>
   <script src="./js/logout.js"></script>
