--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,4 +1,3 @@
-<!DOCTYPE HTML>
 <!--
 	HTML/CSS template from:
 	Spectral by HTML5 UP
@@ -6,25 +5,29 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Petopia</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="./css/main.css" />
-	</head>
+  <head>
+    <title>Petopia</title>
+    <meta charset='utf-8' />
+    <meta
+      name='viewport'
+      content='width=device-width, initial-scale=1, user-scalable=no'
+    />
+    <link rel='stylesheet' href='./css/main.css' />
+  </head>
 
-      <!-- Render the sub layout -->
-      {{{ body }}}
+  <!-- Render the sub layout -->
+  {{{body}}}
 
-<!-- Footer -->
-	<footer id="footer">
-		<ul class="copyright">
-			<li>By Mylan, Marlena, Tyler, & Linkin</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-		</ul>
-	</footer>
-	 
-	{{#if logged_in}}
- 	 <script src="/js/logout.js"></script>
+  <!-- Footer -->
+  <footer id='footer'>
+    <ul class='copyright'>
+      <li>By Mylan, Marlena, Tyler, & Linkin</li><li>Design:
+        <a href='http://html5up.net'>HTML5 UP</a></li>
+    </ul>
+  </footer>
+
+  {{#if logged_in}}
+    <script src='/js/logout.js'></script>
   {{/if}}
 
 </html>
